# compliance-checker

./: .appveyor.yml  .buildinfo  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CNAME  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  acdd-ncml.json  appveyor.yml  bumpversion.sh  cchecker.py  cf-standard-name-table.xml  compliance_checker_api.html  conda-requirements.txt  conda-requirements_pre3_2.txt  create_nc.py  development.html  docker-compose.yml  faq.html  gen_conda_requirements.py  genindex.html  index.html  ioos-metamap-sos-gc.json  list_checkers.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickintro.html  readme_link.html  reproduce_issue.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  (+6 more)
.github/ISSUE_TEMPLATE/: compliance-checker-issue-report.md
.github/actions/python-package-setup/: action.yml
.github/workflows/: cc-checker-ugrid-test.yml  cc-plugin-cc6-test.yml  cc-plugin-glider-test.yml  cc-plugin-ncei-test.yml  cc-plugin-og-test.yml  cc-plugin-sgrid-test.yml  cc-plugin-ugrid-test.yml  codecov.yml  default-tests.yml  deploy-docs.yml  integration-tests.yml  miniconda-win.yml  pre-commit.yml  preview-docs.yml  publish.yml  pypi.yml  update-cf-names-table.yml
_modules/: index.html
_modules/compliance_checker/: acdd.html  base.html  cfutil.html  ioos.html  runner.html  suite.html  util.html
_modules/compliance_checker/cf/: cf_1_6.html  cf_1_7.html
_sources/: compliance_checker_api.rst.txt  index.rst.txt  quickintro.md.txt
compliance_checker/: __init__.py  _version.py  acdd.py  base.py  cchecker.py  cf.py  cfunits.py  cfutil.py  cfutil.py.bkp  glider_dac.py  ioos.py  runner.py  suite.py  template.jinja  template.jinja.table  units.py  util.py
compliance_checker/cf/: __init__.py  appendix_a.py  appendix_c.py  appendix_d.py  appendix_e.py  appendix_f.py  cf.py  cf_18.py  cf_19.py  cf_1_10.py  cf_1_11.py  cf_1_6.py  cf_1_7.py  cf_1_8.py  cf_1_9.py  cf_base.py  gcmd_contents.json  util.py
compliance_checker/data/: acdd-19115-2.json  acdd-ncml.json  cf-standard-name-table.xml  ioos-metamap-ncml.json  ioos-metamap-sos-ds.json  seanames.csv  unitless.json
compliance_checker/data/templates/: ccheck.html.j2  ccheck_wrapper.html.j2
compliance_checker/plugins/acdd/: __init__.py  plugin.py
compliance_checker/plugins/acdd/rules/: attributes.py  conventions.py  iso_dates.py  metadata_link.py  no_id_blanks.py
compliance_checker/protocols/: cdl.py  erddap.py  netcdf.py  opendap.py  zarr.py
compliance_checker/tests/: __init__.py  conftest.py  helpers.py  resources.py  test_acdd.py  test_base.py  test_categorical_units.py  test_cf.py  test_cf_integration.py  test_cli.py  test_feature_detection.py  test_glidercheck.py  test_ioos.py  test_ioos_profile.py  test_ioos_sos.py  test_protocols.py  test_simple_api.py  test_suite.py  test_util.py
compliance_checker/tests/cassettes/: test_erddap.yaml  test_netcdf_content_type.yaml
compliance_checker/tests/data/: 20160919092000-ABOM-L3S_GHRSST-SSTfnd-AVHRR_D-1d_dn.cdl  20160919092000-ABOM-L3S_GHRSST-SSTfnd-AVHRR_D-1d_dn_truncate.cdl  2d-regular-grid.cdl  2d-static-grid.cdl  2dim-grid.cdl  2dim-grid.nc  3d-regular-grid.cdl  3d-static-grid.cdl  IOOS_Glider_NetCDF_v2.0.nc  NCEI_profile_template_v2.0_2016-09-22_181835.151325.cdl  bad-instance.cdl  bad-instance.nc  bad-trajectory.cdl  bad-trajectory.nc  bad_cell_measure1.cdl  bad_cell_measure1.nc  bad_cell_measure2.cdl  bad_cell_measure2.nc  bad_cf_role.cdl  bad_cf_role.nc  bad_data_type.cdl  bad_data_type.nc  bad_missing_data.cdl  bad_reference.cdl  bad_reference.nc  bad_region.cdl  bad_region.nc  bad_units.cdl  bad_units.nc  cell_measure.cdl  cf_example_cell_measures.cdl  chap2.cdl  climatology.cdl  cont_ragged.cdl  conv_bad.cdl  conv_bad.nc  conv_multi.cdl  conv_multi.nc  coordinate_types.cdl  coordinates_and_metadata.cdl  (+68 more)
compliance_checker/tests/data/appendix_h/: point.cdl  timeseries-incomplete.cdl  timeseries-non-static.cdl  timeseries-orthogonal.cdl  timeseries-single.cdl
compliance_checker/tests/data/examples/: 3mf07.cdl  bio_taxa.cdl  cf_example_cell_measures.cdl  fvcom.cdl  glcfs.cdl  hycom_global.cdl  kibesillah.cdl  l01-met.cdl  lateral_search_example.nc  ocos.cdl  ooi_glider.cdl  pr_inundation.cdl  sldmb_43093_agg.cdl  sp041.cdl  swan.cdl  usgs_dem_saipan.cdl  ww3.cdl
compliance_checker/tests/data/gliders/: Bad.cdl  IOOS_Glider_NetCDF_v2.0.cdl  IOOS_Glider_NetCDF_v2.0.nc  bad_location.nc  bad_metadata.cdl  bad_qc.nc
compliance_checker/tests/data/http_mocks/: ncsos_describesensor.xml  ncsos_getcapabilities.xml
compliance_checker/tests/data/non-comp/: 1d_bound_bad.cdl  bad-rhgrid.cdl  bad-rhgrid.nc  bad.cdl  bad2dim.cdl  bad2dim.nc  bounds_bad_num_coords.cdl  bounds_bad_order.cdl  self_referencing.cdl  self_referencing.nc  time_units.cdl  time_units.nc
compliance_checker/tests/data/trajectory.zarr/: .zmetadata
compliance_checker/tests/data/trajectory.zarr/lat/: .zarray  .zattrs
compliance_checker/tests/data/trajectory.zarr/lon/: .zattrs  0.0
compliance_checker/tests/data/trajectory.zarr/temperature/: .zarray  .zattrs  0.0.0
compliance_checker/tests/data/trajectory.zarr/time/: .zarray  .zattrs  0.0
compliance_checker/tests/data/trajectory.zarr/z/: .zarray  .zattrs  0
compliance_checker/tests/plugins/acdd/: test_plugin.py
compliance_checker/tests/plugins/acdd/rules/: test_attributes.py  test_conventions.py  test_id_blanks.py  test_iso_dates.py  test_metadata_link.py
conda.recipe/: meta.yaml
doc/: ubuntu-install-guide.md
docs/: Makefile  cf_feature_parity_matrix.md
docs/source/: compliance_checker.rst  compliance_checker_api.rst  conf.py  development.md  faq.md  index.rst
docs/source/_templates/: layout.html
docs/source/_templates/autosummary/: module.rst
test-data/: 2dim-grid.nc  bad_data_type.nc  bad_missing_data.nc  bad_region.nc  cont_ragged.nc  example-grid.nc  index_ragged.nc  ru07-20130824T170228_rt0.nc
test-data/non-comp/: bad.nc  badname.netcdf
tests/: test_acdd.py  test_cf.py  test_suite.py
