[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "slowtest: marks slow tests (deselect with '-m \"not slowtest\"')"
]

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodecstyle
    "F", # flakes
    "I", # import sorting
    "W", # pydocstyle
    "UP", # upgrade
]
target-version = "py38"
line-length = 200

exclude = [
  "compliance_checker/cf/cf.py",
]

ignore = [
  "E501",
]

[tool.ruff.per-file-ignores]
"docs/source/conf.py" = [
  "E402",
  "A001",
]
