[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "compliance-checker"
description = "Checks Datasets and SOS endpoints for standards compliance"
readme = "README.md"
license = { text = "Apache-2.0" }
maintainers = [
  { name = "Dave Foster", email = "dave@axiomdatascience.com" },
  { name = "Benjamin Adams" },
  { name = "Luke Campbell" },
  { name = "Filipe Fernandes" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://ioos.github.io/compliance-checker"
urls.homepage = "https://compliance.ioos.us/index.html"
urls.repository = "https://github.com/ioos/compliance-checker"
scripts.compliance-checker = "cchecker:main"
entry-points."compliance_checker.suites"."acdd-1.1" = "compliance_checker.acdd:ACDD1_1Check"
entry-points."compliance_checker.suites"."acdd-1.3" = "compliance_checker.acdd:ACDD1_3Check"
entry-points."compliance_checker.suites"."cf-1.6" = "compliance_checker.cf.cf:CF1_6Check"
entry-points."compliance_checker.suites"."cf-1.7" = "compliance_checker.cf.cf:CF1_7Check"
entry-points."compliance_checker.suites"."cf-1.8" = "compliance_checker.cf.cf:CF1_8Check"
entry-points."compliance_checker.suites"."cf-1.9" = "compliance_checker.cf.cf:CF1_9Check"
entry-points."compliance_checker.suites"."ioos-0.1" = "compliance_checker.ioos:IOOS0_1Check"
entry-points."compliance_checker.suites"."ioos-1.1" = "compliance_checker.ioos:IOOS1_1Check"
entry-points."compliance_checker.suites"."ioos-1.2" = "compliance_checker.ioos:IOOS1_2Check"
entry-points."compliance_checker.suites"."ioos_sos" = "compliance_checker.ioos:IOOSBaseSOSCheck"

[tool.setuptools]
packages = [
  "compliance_checker",
]
license-files = [
  "LICENSE",
]
zip-safe = false
include-package-data = true
script-files = [
  "cchecker.py",
]

[tool.setuptools.package-data]
compliance_checker = [
  "data/*.xml",
  "tests/data/*.nc",
  "tests/data/*.cdl",
  "tests/data/non-comp/*.cdl",
  "data/templates/*.j2",
]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "compliance_checker/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py39"
line-length = 200

exclude = [
  "compliance_checker/cf/cf.py",
]

lint.select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "E",  # pycodecstyle
  "F",  # flakes
  "I",  # import sorting
  "UP", # upgrade
  "W",  # pydocstyle
]
lint.ignore = [
  "E501",
]

lint.per-file-ignores."compliance_checker/cf/appendix_f.py" = [
  "B033",
] # ignore duplicates items in the set
lint.per-file-ignores."compliance_checker/cfutil.py" = [
  "B028",
]
lint.per-file-ignores."docs/source/conf.py" = [
  "A001",
  "E402",
]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests (deselect with '-m \"not integration\"')",
  "slowtest: marks slow tests (deselect with '-m \"not slowtest\"')",
]
filterwarnings = [
  "error",
  "ignore:this date/calendar/year zero convention is not supported by CF", # CFtime warning, probably harmless here?
  "ignore:Received exception when making HEAD request to",                 # In compliance_checker/protocols/netcdf.py::is_remote_netcdf We can still tell if it is remote without the handshake.
  "ignore:unclosed database in",                                           # Not sure what is causing this one, only happens in Python 3.13.
  "ignore:unclosed file",                                                  # Should make Windows + Python 3.10 and 3.11 pass, we should check when this warning was triggered first.
]
